--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-dom": "17.0.1",
         "sass": "^1.29.0",
         "stripe": "^8.148.0",
+        "use-sound": "^4.0.0",
         "uuid": "^8.3.1",
         "validator": "^13.1.17"
     },
