--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "prop-types": "^15.7.2",
         "react": "17.0.1",
         "react-dom": "17.0.1",
+        "react-multi-carousel": "^2.6.3",
         "sass": "^1.29.0",
         "stripe": "^8.148.0",
         "use-sound": "^4.0.0",
